# evenTem

./: .gitignore  MANIFEST.in  README.md  setup.py
BuildTools/: CMakeLists.txt  GNUbuild.bat  MSVCbuild.bat  Macbuild  MacbuildTorch  UNIXbuild.sh  UNIXbuildTorch.sh  build_multi.bat  build_multi_UNIX.sh  build_multi_mac
EvenTem/: __init__.py  convention.txt  eventem.py
EvenTem/binaries/: eventem.cp310-win_amd64.pyd  eventem.cp311-win_amd64.pyd  eventem.cp312-win_amd64.pyd  eventem.cp39-win_amd64.pyd
EvenTem/src/: pybind.cpp
EvenTem/src/core/: EELS.cpp  EELS.h  Electron.cpp  Electron.h  FourD.cpp  FourD.h  LiveProcessor.cpp  LiveProcessor.h  Pacbed.cpp  Pacbed.h  Ricom.cpp  Ricom.h  Roi.cpp  Roi.h  Var.cpp  Var.h  vSTEM.cpp  vSTEM.h
EvenTem/src/detectors/: Advapix.cpp  Advapix.hpp  Cheetah.hpp  Cheetah_pixeltrig.hpp  FrameBased.hpp  HDF5_DS.hpp  Merlin.hpp  Numpy.hpp  Simulated.hpp  Timepix.hpp
EvenTem/src/utils/: AnnularDetector.hpp  AtomicWrapper.hpp  BoundedThreadPool.hpp  Declusterer.hpp  FileConnector.cpp  FileConnector.h  FileHeaderParser.hpp  Logger.hpp  ProgressMonitor.cpp  ProgressMonitor.h  Roi4D.hpp  SocketConnector.cpp  SocketConnector.h  dtype_Electron.hpp
Examples/: Convert.ipynb  ROI.ipynb  Ricom.ipynb  vSTEM.ipynb
docs/: conf.py  index.rst  makedocs.bat  modules.rst
